# rf

./: .gitignore  Cargo.toml  index.html  styles.css
src/: app.rs  input.css  package-lock.json  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
